@@ -13,6 +13,7 @@ Added another fourth easter egg ;)
 Added read only setting for esxdos handler
 Added .nex file viewer
 Added setting to redefine joystick fire key
+Added Debug action to set PC register to zero
 
 Improved File utilities Browser:
 -Added support for browsing inside disk images (.mmc, .ide, etc)
